syntax = "proto3";

package user.v2;

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByIdResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string created_at = 6;
  string updated_at = 7;
}

message GetUserByEmailResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string created_at = 6;
  string updated_at = 7;
}
